--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Mukta+Mahee:300,700" rel="stylesheet">
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
         <link rel="stylesheet" href="css/style.css" />
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
 
     </head>
     <body>
@@ -20,18 +20,18 @@
                     <div class="col-sm-6 bg-faded text-center col-fixed">
                         <div class="vMiddle">
                           <h1 class="pt-4 h2">
-                              <span class="text-green">[Your Domain].com</span>
+                              <span class="text-green">grovecafe.in</span>
                               <small>available for sale</small>
                           </h1>
                           <p class="mt-4">
                               For instantly purchase. Please make an order.
                           </p>
-                          <div class="pt-5">
+                          <!-- <div class="pt-5">
                               <label for="name">
                               <a class="btn text-white bg-green btn-lg">Buy now for $4999</a>
                               </label>
-                          </div>
-                          <div class="row d-md-flex text-center justify-content-center text-primary action-icons">
+                          </div> -->
+                          <!-- <div class="row d-md-flex text-center justify-content-center text-primary action-icons">
                               <div class="col-sm-4">
                                   <p><em class="ion-ios-telephone-outline icon-md"></em></p>
                                   <p class="lead"><a href="tel:+[Your Phone]">+[Your Phone]</a></p>
@@ -40,7 +40,7 @@
                                   <p><em class="ion-ios-chatbubble-outline icon-md"></em></p>
                                   <p class="lead"><a href="mailto:email@[Your Domain].com">email@[Your Domain].com</a></p>
                               </div>
-                          </div>
+                          </div> -->
                       </div>
                     </div>
                     <div class="col-sm-6 offset-sm-6">
@@ -48,7 +48,7 @@
                             <div class="container">
                                 <div class="row height-100">
                                     <div class="col-sm-10 offset-sm-1 mt-2">
-                                        <form id="main-offer-form" action="contact.php" method="post">
+                                        <form id="main-offer-form" action="https://getform.io/f/lakmrwna" method="post">
                                             <h2 class="text-primary">Interested in this domain?</h2>
                                             <hr/>
                                             <div class="form-group">
@@ -93,10 +93,6 @@
                                             <div class="form-group">
                                                 <textarea name="comments" class="form-control" placeholder="Message (optional)"></textarea>
                                             </div>
-                                            <div class="form-group">
-                                              <div id="recaptcha" class="g-recaptcha" data-sitekey="6Lc_sf8aAAAAAFk3KIcYvqcIoo1HeCOZu4faK3DA" data-callback="onSubmit" data-size="invisible"></div>
-                                            </div>
-
                                             <button type="submit" class="btn text-white btn-lg bg-primary btn-block">Make an offer</button>
                                         </form>
                                     </div>
