--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Sales Inquery || [Your Domain]</title>
+        <title>Sales Inquery || GroveCafe.in</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -88,7 +88,7 @@
                                                   name="price"
                                                   class="form-control"
                                                   min="0"
-                                                  placeholder="Offer price in USD? (Required)">
+                                                  placeholder="Offer price in INR (Required)">
                                             </div>
                                             <div class="form-group">
                                                 <textarea name="comments" class="form-control" placeholder="Message (optional)"></textarea>
